# example-ddd-es

./: README.md
rust-cqrs/: README.md  docker-compose.yml
rust-cqrs/crates/domain-bank/: Cargo.toml
rust-cqrs/crates/domain-plane/: Cargo.toml
rust-cqrs/crates/domain-plane/src/: config.rs  lib.rs
rust-cqrs/crates/domain-plane/src/domain/: aggregate.rs  commands.rs  errors.rs  events.rs  mod.rs  tests.rs
rust-cqrs/crates/domain-plane/src/queries/: current_journey.rs  logger.rs  mod.rs
rust-cqrs/crates/domain-plane/src/services/: mod.rs
rust-cqrs/crates/server/: Cargo.toml
rust-cqrs/crates/server/src/: main.rs  metadata_extension.rs
rust-cqrs/crates/server/src/routes/: bank.rs  mod.rs  plane.rs
rust-cqrs/curl/: test_api.sh
rust-cqrs/db/: init.sql
rust-cqrs/test/: test_api_plane.sh
rust-cqrs/test/plane/: test_api.sh
