[package]
name = "domain-bank"
version = "0.1.0"
edition = "2021"

[dependencies]
cqrs-es = "0.4.5"
postgres-es = "0.4.5"

async-trait = "0.1"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
sqlx = { version = "0.6", features = [ "postgres" , "runtime-tokio-rustls", "json"] }
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
